# bevy_tgfp

./: .gitignore  2025.md  7-peace-was-never-an-option.md  BUGS.md  Cargo.toml  DESIGN.md  SPELLS.md  index.html  wasm.sh  wasm.txt
.cargo/: config.toml
backup/: main.rs
backup/after_break/: graphics.rs  main.rs  map.rs  spells.rs
backup/animated_spells/: graphics.rs  main.rs  map.rs  spells.rs
backup/correct_order/: creature.rs  events.rs  graphics.rs  main.rs  spells.rs
backup/doorways/: creature.rs  graphics.rs  input.rs  map.rs
backup/epsilon/: graphics.rs  input.rs  map.rs  sets.rs  spells.rs
src/: caste.rs  crafting.rs  creature.rs  cursor.rs  events.rs  graphics.rs  input.rs  main.rs  map.rs  quests.rs  sets.rs  spells.rs  tests.rs  text.rs  ui.rs
tutorial/: 1-drawing-the-player.md  2-tiles-to-run-around-in.md  3-getting-chased-around.md  4-a-la-carte-sorcery.md  5-laser-death-rave.md  5-laser-sumo-rave.md  5-sumo-ice-skating.md  6-laser-death-rave.md  6-let-chaos-reign.md  6-wip.md  7-peace-was-never-an-option.md  8-tower-of-trials.md
tutorial/source_code/1-drawing-the-player/: main.rs
tutorial/source_code/2-tiles-to-run-around-in/: main.rs
tutorial/source_code/4-a-la-carte-sorcery/: creature.rs  graphics.rs  input.rs  main.rs  map.rs  spells.rs
tutorial/source_code/5-laser-sumo-rave/: graphics.rs  input.rs  map.rs  sets.rs  spells.rs
tutorial/source_code/5-sumo-ice-skating/: input.rs  map.rs
unused/: 6-laser-death-rave.md  giga_cage.txt
unused/5-sumo-ice-skating/: creature.rs  graphics.rs  main.rs  spells.rs
(+20 files in other folders)
